--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@ body {
 :root {
   --transition: all 400ms ease;
 }
+.Header {
+  margin-bottom: 4rem;
+}
 .Hello {
   display: flex;
   flex-direction: column;
@@ -60,8 +63,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 .Headericons {
   position: absolute;
-  left: 200px;
-  bottom: 150px;
+  left: 12%;
+  bottom: 23%;
   transform: scale(1.5,1);
   display: grid;
   grid-template-rows: repeat(3, 1fr);
@@ -69,13 +72,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 .Scrolldown {
   position: absolute;
-  right: 200px;
-  bottom: 250px;
+  right: 10%;
+  bottom: 28.5%;
   transform: rotate(90deg);
   color: #4db5ff;
 }
 .me {
   width: 70%;
+  max-width: 27rem;
   background: linear-gradient( #4db5ff, #1f1f38);
   padding: 6rem 1rem 0 1rem;
   border-radius: 20rem 20rem 0 0;
@@ -94,16 +98,18 @@ a:hover {
 }
 .Nav {
   transform: scale(1.5,1);
-  display: flex;
+  display: none;
   gap: 1.3rem;
   position: fixed;
-  bottom: 60px;
-  left: 747px;
+  bottom: 7%;
+  left: 42.4%;
   z-index: 2;
   background: rgba(0, 0, 0, 0.4);
-  width: max-content;
+  max-width: 100%;
   padding: 0.9rem 1.31rem;
   border-radius: 2rem;
+  backdrop-filter: blur(50px);
+  
 }
 .Nav > a {
   border-radius: 50%;
@@ -116,4 +122,270 @@ a:hover {
 }
 .hover {
   background-color: rgba(255, 255, 255, 0.2);
+}
+@media screen and (max-width: 600px) {
+  .Scrolldown {
+    display: none;
+  }
+   /* .me {
+    width: 65%;
+  }  */
+}
+
+
+/* /================ About=======================/ */
+.About {
+  margin-bottom: 10rem;
+}
+.Aboutheader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+.Aboutheader > h1 {
+  color: #4db5ff;
+}
+.Aboutmaindiv {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.Aboutright >div {
+  display: flex;
+  gap: 2.5rem;
+  flex-wrap: wrap;
+  margin: 3rem 0 2rem 0;
+  flex: 1;
+}
+.Aboutright >div >article {
+  background-color: #2c2c6c ;
+  padding: 2rem;
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  text-align: center;
+  align-items: center;
+  color: #4db5ff;
+}
+.Aboutright >div >article >p  {
+  margin-top: 1.5rem;
+  color: white;
+}
+.Aboutright >div >article >h5 {
+  color: rgba(255, 255, 255, 0.5);
+
+}
+.Aboutleft {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.Aboutright {
+  width: 80%;
+}
+.Aboutright >div :hover {
+  background: transparent;
+  transition: var(--transition);
+}
+.Aboutmaindiv > div >p {
+  text-align: left;
+  margin-top: 3rem;
+}
+.Aboutimg {
+  display: flex;
+  justify-content: center;
+  background: linear-gradient( 45deg, transparent, #4db5ff, transparent);
+  border-radius: 2rem;
+  width: max-content;
+  margin-top: 3rem;
+}
+.Aboutimg img {
+  max-width: 25rem;
+  width: 100%;
+  border-radius: 2rem;
+  transform: rotate(10deg); 
+  transition: var(--transition); 
+}
+.Aboutimg img:hover {
+  transform: rotate(0deg);
+}
+.Aboutlink3 {
+ margin-top: 2rem; 
+}
+@media screen and (max-width: 965px) {
+  .Aboutmaindiv {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 600px) {
+  .Aboutimg {
+    width: 80%;
+  }
+}
+
+
+/* =====================My Experience==================== */
+.Experience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10rem;
+}
+.Fullstack {
+  display: flex;
+  gap: 5rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 4rem;
+}
+.Fullstack :hover{
+  background: transparent;
+  border: 1px solid #4db5ff;
+  transition: var(--transition);
+  cursor: default;
+}
+.Fullstack >div :hover {
+  background: transparent;
+  border: none;
+}
+.Orderedlist {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem 9rem;
+  margin-top: 1.5rem;
+}
+.Frontend {
+  background-color: #2c2c6c;
+  padding: 2rem 7rem 2rem 4rem;
+  border-radius: 2rem;
+  min-height: 371.02px;
+ 
+}
+.Frontend :hover {
+  background: transparent;
+}
+.Frontend h3 {
+  text-align: center;
+  margin-top: 0.7rem;
+  color: #4db5ff;
+}
+.iconsexp {
+  display: flex;
+}
+@media screen and (max-width: 600px) {
+  .Orderedlist {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
+    align-items: center;
+  }
+  .Frontend {
+    width: 80%;
+  }
+}
+/* =====================Services==================== */
+.Servicemain {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  flex-wrap: wrap;
+  margin-top: 2.8rem;
+  margin-bottom: 8rem;
+}
+.Servicemain :hover {
+  background: transparent;
+  transition: var(--transition);
+  color: #4db5ff;
+}
+.Servicemain >div {
+  border: 1px solid #4db5ff;
+  background-color: #2c2c6c;
+  border-radius: 0 0 2rem 2rem;
+  display: flex;
+  flex-direction: column;
+}
+.Servicemain >div >header {
+  text-align: center;
+  padding: 2rem;
+  background-color: #4db5ff;
+  border-radius: 0 0 2rem 2rem;
+  color: #1f1f38;
+  font-weight: 600;
+}
+.Servicemain >div >main {
+  padding: 2rem 7rem 2rem 3rem;
+}
+
+.Servicemain >div >main >ul >ol {
+  padding: 1rem;
+}
+.Firstthirddiv {
+  height: fit-content
+}
+@media screen and (max-width: 600px) {
+    .Servicemain >div {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+}
+/* =====================Portfolio==================== */
+.Portfoliomain {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  width: 100%;
+  margin-bottom: 10rem;
+}
+.Portfoliomain >div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  justify-items: center;
+
+}
+.Eachport {
+ background-color: #2c2c6c;
+  padding: 2rem;
+  border-radius: 2rem;
+  height: fit-content;
+}
+
+.Eachport >image >img {
+  max-width: 350px;
+  max-height: 350px;
+  border-radius: 2rem;
+  width: 100%;
+  height: auto;
+}
+.Eachport >image :hover {
+  transform: rotate(360deg);
+  transition: all 1000ms ease;
+}
+.Eachport > h3 {
+  display: flex;
+  max-width: fit-content;
+}
+.Eachport >section {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 1350px) {
+  .Portfoliomain >div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 1000px) {
+  .Portfoliomain >div {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 80%;
+  }
 }
