--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,11 @@
   list-style: none;
   text-decoration: none;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 html {
   scroll-behavior: smooth;
+  
 }
 ::-webkit-scrollbar {
   display: none;
@@ -16,7 +18,7 @@ html {
 body {
   background-image: url(./Images/bg-texture.png);
   background-color: #1f1f38;
-  font-family: 'Poppins', sans-serif;;
+  font-family: 'Poppins', sans-serif; 
   color: white;
   width: 100%;
   display: flex;
@@ -26,6 +28,7 @@ body {
 }
 :root {
   --transition: all 400ms ease;
+  font-family: 'Poppins', sans-serif;
 }
 .Header {
   margin-bottom: 4rem;
@@ -78,7 +81,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #4db5ff;
 }
 .me {
-  width: 70%;
+  width: 80%;
   max-width: 27rem;
   background: linear-gradient( #4db5ff, #1f1f38);
   padding: 6rem 1rem 0 1rem;
@@ -92,6 +95,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 a {
   transition: var(--transition);
+  text-decoration: none;
 }
 a:hover {
   color: #ffffff;
@@ -222,7 +226,12 @@ a:hover {
 }
 @media screen and (max-width: 600px) {
   .Aboutimg {
-    width: 80%;
+    width: 60%;
+  }
+  .Aboutright {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
 }
 
@@ -387,5 +396,99 @@ a:hover {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     width: 80%;
+  }
+}
+/* =====================Testimonial==================== */
+.Testimonial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.Avatar2 {
+  max-width: 4rem;
+  border-radius: 50%;
+  border: 5px solid #4db5ff;
+  margin-bottom: 2rem;
+}
+
+/* =====================Contact==================== */
+.Contactmain {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-top: 4rem;
+}
+.Contactarticle {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.Contactarticle >article {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  min-width: 330px;
+  align-items: center;
+  background-color: #2c2c6c;
+  padding: 1.6rem;
+  border-radius: 2rem;
+  margin-left: 6rem;
+}
+.Contactarticle >article >a {
+  color: #4db5ff;
+  margin-top: 1rem;
+}
+.Contactarticle >article >a:hover{
+  color: #1f1f38;
+}
+.Contactform {
+  display: flex;
+  flex-direction: column;
+  max-width: 60%;
+  gap: 1.5rem;
+  min-width: 350px;
+}
+.Contactform >input {
+  height: 4.5rem;
+  border-radius: 1rem;
+  background: transparent;
+  border: 1px solid #2c2c6c;
+  outline: none;
+  padding: 2rem;
+  font-size: medium;
+  color: white;
+}
+.Contactform >textarea {
+  resize: none;
+  height: 14rem;
+  border-radius: 1rem;
+  background: transparent;
+  border: 1px solid #2c2c6c;
+  outline: none;
+  padding: 2rem;
+  font-size: larger;
+  color: white;
+}
+.Contactform >button {
+  max-width: 30%;
+}
+.Contactform >button:hover {
+  color: #ffffff; 
+}
+.Contacticons {
+  min-width: 2rem;
+}
+@media screen and (max-width: 1000px) {
+  .Contactmain {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+  }
+  .Contactarticle >article {
+    margin-left: 0rem;
   }
 }
