--- a/src/index.css
+++ b/src/index.css
@@ -101,16 +101,16 @@ a:hover {
   color: #ffffff;
 }
 .Nav {
-  transform: scale(1.5,1);
-  display: none;
-  gap: 1.3rem;
+  display: flex;
+  gap: 3rem;
   position: fixed;
   bottom: 7%;
-  left: 42.4%;
+  right: 50%;
+  transform: translateX(50%);
   z-index: 2;
   background: rgba(0, 0, 0, 0.4);
   max-width: 100%;
-  padding: 0.9rem 1.31rem;
+  padding: 1.2rem 2rem;
   border-radius: 2rem;
   backdrop-filter: blur(50px);
   
@@ -120,20 +120,23 @@ a:hover {
   padding: 0.4rem;
   display: flex;
   justify-content: center;
+  transform: scale(1.2, 1.2);
 }
 .Nav > a:hover {
-  background-color: #1f1f38;
+  background-color: #4db5ff;
 }
 .hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .Scrolldown {
     display: none;
   }
-   /* .me {
-    width: 65%;
-  }  */
+  .Headericons{
+    position: absolute;
+    left: 6%;
+  }
+  
 }
 
 
@@ -378,6 +381,7 @@ a:hover {
 .Eachport > h3 {
   display: flex;
   max-width: fit-content;
+  /* user-select: none; */
 }
 .Eachport >section {
   margin-top: 1rem;
@@ -400,19 +404,35 @@ a:hover {
 }
 /* =====================Testimonial==================== */
 .Testimonial {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  justify-content: center;
+  max-width: 100%;
 }
-
-
 .Avatar2 {
   max-width: 4rem;
   border-radius: 50%;
   border: 5px solid #4db5ff;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
-
+.Card {
+  background-color: transparent;
+  max-width: 700px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 3rem auto 5rem;
+}
+.Card1 {
+  background-color: #2c2c6c;
+  margin: 0rem 3rem;
+  padding: 2rem;
+  border-radius: 2rem;
+}
+.Card1 >p {
+  color: rgba(255, 255, 255, 0.7);
+  margin-top: 1rem;
+}
 /* =====================Contact==================== */
 .Contactmain {
   display: grid;
@@ -491,4 +511,36 @@ a:hover {
   .Contactarticle >article {
     margin-left: 0rem;
   }
+}
+/* ================Footer====================== */
+.Footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  background-color: #2c2c6c;
+  margin-top: 4rem;
+  flex-wrap: wrap;
+}
+.Summary {
+  display: flex;
+  gap: 3rem;
+  margin: 2rem auto;
+  flex-wrap: wrap;
+}
+.Summary >h3 >a {
+  color: #ffffff;
+}
+.Footericons {
+  margin: 2rem auto;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+.Footericons >a {
+  color: #ffffff;
+  background: #1f1f38;
+  padding: 0.5rem 0.7rem 0.3rem 0.7rem;
+  border-radius: 0.5rem;
 }
